feat: added the capacity for smooth scolling, added blogpost images

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <!-- Blog Card 1 -->
             <article class="blog-card">
                 <div class="blog-image">
-                <img src="/api/placeholder/600/400" alt="The Future of Web Development">
+                <img src="/images/blog/java-image-1.jpg" alt="The Future of Web Development">
                 <span class="blog-category">Development</span>
                 </div>
                 <div class="blog-content">
@@ -327,7 +327,7 @@
             <!-- Blog Card 2 -->
             <article class="blog-card">
                 <div class="blog-image">
-                <img src="/api/placeholder/600/400" alt="Optimizing React Performance">
+                <img src="/images/blog/react-image-1.jpg" alt="Optimizing React Performance">
                 <span class="blog-category">React</span>
                 </div>
                 <div class="blog-content">
@@ -362,12 +362,12 @@
             <!-- Blog Card 3 -->
             <article class="blog-card">
                 <div class="blog-image">
-                <img src="/api/placeholder/600/400" alt="Building with Go">
+                <img src="/images/blog/go-image-1.jpg" alt="Building with Go">
                 <span class="blog-category">Go</span>
                 </div>
                 <div class="blog-content">
                 <div class="blog-date">November 1, 2024</div>
-                <a href="/blog/go-microservices" class="blog-title">Building Scalable Microservices with Go</a>
+                <a href="/images/blog/go-image-1.jpg" class="blog-title">Building Scalable Microservices with Go</a>
                 <p class="blog-excerpt">Learn how to design and implement robust microservices architecture using Go, gRPC, and modern cloud practices.</p>
                 <div class="blog-footer">
                     <a href="/blog/go-microservices" class="read-more">
@@ -394,14 +394,12 @@
                 </div>
             </article>
             </div>
-        
-            <div class="view-all-container">
-            <a href="/blog" class="view-all-btn">
-                View All Posts
-                <svg viewBox="0 0 24 24">
-                <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
-                </svg>
-            </a>
+            <!-- all posts buttotn -->
+            <div style="text-align: center; margin-top: 4rem;">
+                <a href="/blog" class="cta-button cta-secondary" style="display: inline-flex; align-items: center; gap: 0.8rem;">
+                    View All Posts
+                    <i class="fas fa-arrow-right"></i>
+                </a>
             </div>
         </section>
         
