--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="hero-content">
               <h1>Hi, I'm <span>Rodgers!</span></h1>
               <h2>Full Stack Software Developer</h2>
-              <p>I'm a passionate UI/UX designer & web developer with 10+ years of experience.</p>
+              <p>I'm a passionate software developer & web developer with 3+ years of experience.</p>
               <div class="cta-buttons">
                 <a href="#contact" class="cta-button cta-primary">Got a project?</a>
                 <a href="#contact" class="cta-button cta-secondary">Let's talk</a>
@@ -56,7 +56,7 @@
             
             <div class="hero-stats">
               <div class="stat-card">
-                <span class="stat-number">10+</span>
+                <span class="stat-number">3+</span>
                 <span class="stat-label">Years of Experience</span>
               </div>
               <div class="stat-card">
@@ -68,8 +68,8 @@
                 <span class="stat-label">Happy Clients</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">50+</span>
-                <span class="stat-label">Happy Clients</span>
+                <span class="stat-number">15+</span>
+                <span class="stat-label">Return Clients</span>
               </div>
               <div class="tech-stack">
                 <!-- <h3>Tech Stack</h3> -->
