update: updated the image sorce pointers to correct directories

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
         <div class="profile-container">
-            <img src="/images/rogy.png" alt="Rodgers" class="profile-img">
+            <img src="/images/portfolio/rogy.png" alt="Rodgers" class="profile-img">
         </div>
         <nav>
             <ul class="nav-links">
@@ -125,7 +125,7 @@
                 <!-- Project 1 -->
                 <div class="service-card" style="overflow: hidden; padding: 0; cursor: pointer;">
                     <div style="position: relative; overflow: hidden;">
-                        <img src="/images/portfolio1.png" alt="Melodic Meetups" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="/images/portfolio/portfolio1.png" alt="Melodic Meetups" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
                             <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
@@ -150,7 +150,7 @@
                 <!-- Project 2 -->
                 <div class="service-card" style="overflow: hidden; padding: 0; cursor: pointer;">
                     <div style="position: relative; overflow: hidden;">
-                        <img src="/images/portfolio2.png" alt="Crypto Trading Bot" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="/images/portfolio/portfolio2.png" alt="Crypto Trading Bot" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
                             <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
@@ -175,7 +175,7 @@
                 <!-- Project 3 -->
                 <div class="service-card" style="overflow: hidden; padding: 0; cursor: pointer;">
                     <div style="position: relative; overflow: hidden;">
-                        <img src="/images/portfolio2.png" alt="3D Portfolio Gallery" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="/images/portfolio/portfolio2.png" alt="3D Portfolio Gallery" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
                             <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
@@ -200,7 +200,7 @@
                 <!-- Project 4 -->
                 <div class="service-card" style="overflow: hidden; padding: 0; cursor: pointer;">
                     <div style="position: relative; overflow: hidden;">
-                        <img src="/images/portfolio1.png" alt="Social Audio App" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="/images/portfolio/portfolio1.png" alt="Social Audio App" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
                             <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
