feat: improved the tech stack display for a more animated display

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                 <span class="stat-number">15+</span>
                 <span class="stat-label">Return Clients</span>
               </div>
+              <!-- tech stack -->
               <div class="tech-stack">
-                <!-- <h3>Tech Stack</h3> -->
                 <div class="tech-icons">
-                  <i class="devicon-react-original" title="React"></i>
-                  <i class="devicon-nodejs-plain" title="Node.js"></i>
-                  <i class="devicon-python-plain" title="Python"></i>
-                  <i class="devicon-mongodb-plain" title="MongoDB"></i>
-                  <i class="devicon-javascript-plain" title="JavaScript"></i>
+                  <i class="devicon-react-original" title="React" style="--i: 1"></i>
+                  <i class="devicon-nodejs-plain" title="Node.js" style="--i: 2"></i>
+                  <i class="devicon-python-plain" title="Python" style="--i: 3"></i>
+                  <i class="devicon-mongodb-plain" title="MongoDB" style="--i: 4"></i>
+                  <i class="devicon-javascript-plain" title="JavaScript" style="--i: 5"></i>
                 </div>
               </div>
             </div>
