updated the projects and portfolio sections

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hero-content">
               <h1>Hi, I'm <span>Rodgers!</span></h1>
               <h2>Full Stack Software Developer</h2>
-              <p>I'm a passionate software developer & web developer with 3+ years of experience.</p>
+              <p>I'm a passionate software & web developer with 3+ years of experience.</p>
               <div class="cta-buttons">
                 <a href="#contact" class="cta-button cta-primary">Got a project?</a>
                 <a href="#contact" class="cta-button cta-secondary">Let's talk</a>
@@ -73,8 +73,8 @@
               <!-- tech stack -->
               <div class="tech-stack">
                 <div class="tech-icons">
-                  <i class="devicon-react-original" title="React" style="--i: 1"></i>
-                  <i class="devicon-nodejs-plain" title="Node.js" style="--i: 2"></i>
+                  <i class="devicon-rust-original" title="Rust" style="--i: 1"></i>
+                  <i class="devicon-go-original-wordmark" title="Go" style="--i: 2"></i>
                   <i class="devicon-python-plain" title="Python" style="--i: 3"></i>
                   <i class="devicon-mongodb-plain" title="MongoDB" style="--i: 4"></i>
                   <i class="devicon-javascript-plain" title="JavaScript" style="--i: 5"></i>
@@ -116,7 +116,7 @@
         </section>
         <!-- Sample Works -->
         <div id="projects" class="section-header">
-            <h2>Featured Works</h2>
+            <h2>Sample Projects</h2>
         </div>
         <section id="projects" class="hero-section">
             <div class="projects-grid">
@@ -125,7 +125,7 @@
                     <div class="project-image-container">
                         <img src="/images/portfolio/portfolio1.png" alt="Melodic Meetups" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
-                            <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
+                            <a href="https://github.com/karodgers/melodic-meetups" target="_blank" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
                             </a>
                         </div>
@@ -133,12 +133,14 @@
                             <div class="project-tags">
                                 <span class="project-tag">GO</span>
                                 <span class="project-tag">JavaScript</span>
+                                <span class="project-tag">CSS</span>
+                                <span class="project-tag">HTML</span>
                             </div>
                             <h3 style="color: white; margin: 0;">Melodic Meetups</h3>
                         </div>
                     </div>
                     <div style="padding: 1.5rem;">
-                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">A real-time analytics dashboard powered by AI, featuring predictive analytics and interactive data visualizations.</p>
+                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">Centered around receiving and manipulating a given API, which contains JSON structured data about music artists, their concerts, and relations between them.</p>
                         <a class="learn-more">
                             View Project Details <i class="fas fa-arrow-right"></i>
                         </a>
@@ -150,20 +152,21 @@
                     <div class="project-image-container">
                         <img src="/images/portfolio/portfolio2.png" alt="Crypto Trading Bot" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
-                            <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
+                            <a href="https://github.com/karodgers/superhero-search-web-app" target="_blank" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
                             </a>
                         </div>
                         <div class="project-overlay">
                             <div class="project-tags">
-                                <span class="project-tag">Python</span>
-                                <span class="project-tag">Machine Learning</span>
+                                <span class="project-tag">JavaScript</span>
+                                <span class="project-tag">HTML</span>
+                                <span class="project-tag">CSS</span>
                             </div>
-                            <h3 style="color: white; margin: 0;">Crypto Trading Bot</h3>
+                            <h3 style="color: white; margin: 0;">Super Hero Search</h3>
                         </div>
                     </div>
                     <div style="padding: 1.5rem;">
-                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">An automated cryptocurrency trading bot using machine learning algorithms for market prediction and risk management.</p>
+                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">This web application allows you to organize, search, and sort superhero data from an external API. It provides a user-friendly interface to view essential superhero information like name, icon, power stats, appearance, and more.</p>
                         <a class="learn-more">
                             View Project Details <i class="fas fa-arrow-right"></i>
                         </a>
@@ -173,22 +176,24 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image-container">
-                        <img src="/images/portfolio/portfolio2.png" alt="3D Portfolio Gallery" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="/images/portfolio/portfolio3.png" alt="3D Portfolio Gallery" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
-                            <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
+                            <a href="https://github.com/karodgers/hacker-news.git" target="_blank" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
                             </a>
                         </div>
                         <div class="project-overlay">
                             <div class="project-tags">
-                                <span class="project-tag">Three.js</span>
-                                <span class="project-tag">WebGL</span>
+                                <span class="project-tag">JavaScript</span>
+                                <span class="project-tag">HTML</span>
+                                <span class="project-tag">CSS</span>
+
                             </div>
-                            <h3 style="color: white; margin: 0;">3D Portfolio Gallery</h3>
+                            <h3 style="color: white; margin: 0;">Hacker News</h3>
                         </div>
                     </div>
                     <div style="padding: 1.5rem;">
-                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">An immersive 3D gallery experience showcasing creative works with interactive animations and dynamic lighting.</p>
+                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">A simple web application that fetches and displays stories from the Hacker News API. It allows users to browse different types of stories, load more posts, and view comments on each post.</p>
                         <a class="learn-more">
                             View Project Details <i class="fas fa-arrow-right"></i>
                         </a>
@@ -200,7 +205,7 @@
                     <div class="project-image-container">
                         <img src="/images/portfolio/portfolio1.png" alt="Social Audio App" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="position: absolute; top: 1rem; right: 1rem; z-index: 2;">
-                            <a href="#" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
+                            <a href="#" target="_blank" class="social-links" style="background: var(--gradient); width: 45px; height: 45px; margin: 0;">
                                 <i class="fab fa-github" style="color: white; font-size: 1.5rem;"></i>
                             </a>
                         </div>
@@ -223,7 +228,7 @@
         </section>
         <!-- View More Projects Button -->
         <div style="text-align: center; margin-top: 4rem;">
-            <a href="#" class="cta-button cta-secondary" style="display: inline-flex; align-items: center; gap: 0.8rem;">
+            <a href="https://github.com/karodgers?tab=repositories" target="_blank" class="cta-button cta-secondary" style="display: inline-flex; align-items: center; gap: 0.8rem;">
                 View All Projects
                 <i class="fas fa-arrow-right"></i>
             </a>
@@ -236,15 +241,15 @@
             <div class="experience-grid">
                 <div class="experience-card">
                     <h3>
-                        Senior UI/UX Designer
-                        <span class="duration">2019 - Present</span>
+                        Apprentice Full Stack Software Developer
+                        <span class="duration">2023 - Present</span>
                     </h3>
-                    <p>Creative Tech Solutions</p>
-                    <p>Leading design initiatives and managing a team of designers to create innovative digital experiences.</p>
+                    <p>Zone01 Kisumu</p>
+                    <p>Leading design initiatives, developing solutions for backend and frontend client needs.</p>
                 </div>
                 <div class="experience-card">
                     <h3>
-                        Web Developer
+                        Frontend Web Developer
                         <span class="duration">2016 - 2019</span>
                     </h3>
                     <p>Digital Frontiers</p>
