--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Post</title>
-  <link rel="stylesheet" href="/static/blog.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Rodgers Kaunda - Full Stck Software Developer</title>
+        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/blog.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    </head>
 <body>
+    <!-- Custom cursor -->
+    <div class="custom-cursor"></div>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <div class="profile-container">
+            <img src="/images/portfolio/rogy.png" alt="Rodgers" class="profile-img">
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html" class="active"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="#services"><i class="fas fa-laptop-code"></i>Services</a></li>
+                <li><a href="#projects"><i class="fas fa-briefcase"></i>Projects</a></li>
+                <li><a href="#experience"><i class="fas fa-user"></i>Experience</a></li>
+                <li> <a href="#blog"><i class="fas fa-blog"></i>Blog</a></li>
+                <li><a href="#contact"><i class="fas fa-envelope"></i>Contact</a></li>
+            </ul>
+        </nav>
+        <div class="social-links">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-dribbble"></i></a>
+        </div>
+    </aside>
+    <!-- hero section -->
     <div class="hero-section">
         <div class="content-wrapper">
             <div class="hero-content">
@@ -35,16 +64,16 @@
           <p class="image-caption">Modern web experiences combine storytelling with interactive elements</p>
       </div> -->
   
-      <h4>1. Widespread Adoption of Web3 and Decentralized Applications (DApps)</h4>
+      <h3>1. Widespread Adoption of Web3 and Decentralized Applications (DApps)</h3>
       <p>The rise of Web3 technologies, which aim to decentralize the web by leveraging blockchain, is set to revolutionize how we think about ownership and data. By 2025, decentralized applications (DApps) may become far more mainstream. Users will have greater control over their data and online identities, while developers will create platforms that empower individuals rather than large corporations. Expect to see more websites incorporating blockchain technology for authentication, payment systems, and data storage, with security and transparency as the main priorities.</p>
   
-      <h4>2. The Evolution of Progressive Web Apps (PWAs)</h4>
+      <h3>2. The Evolution of Progressive Web Apps (PWAs)</h3>
       <p>Progressive Web Apps (PWAs) have been gaining traction for years, and by 2025, they are likely to become a standard in web development. PWAs blur the line between web and mobile applications, offering a seamless experience that works across all devices and platforms. With enhanced support from major browsers and operating systems, PWAs will provide faster loading times, offline functionality, and better performance, making them an ideal solution for companies aiming to reach a wider audience.</p>
-      <h4>3. The Rise of Artificial Intelligence (AI) and Machine Learning (ML) in Web Development</h4>
+      <h3>3. The Rise of Artificial Intelligence (AI) and Machine Learning (ML) in Web Development</h3>
       <p>AI and ML will play a more integral role in web development as we move closer to 2025. These technologies will help automate mundane tasks, such as debugging code, optimizing performance, and personalizing content for users. Furthermore, websites will leverage AI to deliver more intuitive user experiences through features like voice-based search, chatbots for customer service, and predictive content recommendations.</p>
-      <h4>4. No-Code and Low-Code Platforms Expanding</h4>
+      <h3>4. No-Code and Low-Code Platforms Expanding</h3>
       <p>The no-code and low-code movement has been gaining momentum, enabling people without extensive programming knowledge to build websites and applications. By 2025, these platforms are expected to become even more sophisticated, further democratizing the development process. While no-code platforms won’t replace developers, they will empower small businesses and startups to bring their ideas to life faster and at a lower cost.</p>
-      <h4>5.The Expansion of Voice Search and Natural Language Processing (NLP)</h4>
+      <h3>5.The Expansion of Voice Search and Natural Language Processing (NLP)</h3>
       <p>Voice search has been growing steadily, and with advancements in natural language processing (NLP), it’s set to become an essential part of how users interact with the web. Websites optimized for voice search will have a significant advantage, and developers will need to focus on creating content and interfaces that cater to voice commands.</p>
       <div class="key-insight">
           <h3>Conclusion</h3>
@@ -53,9 +82,8 @@
     </div>
     <div class="content-wrapper">
       <div class="author-section">
-          <p class="written-by">Written by</p>
+          <p class="written-by">PUBLISHED: 12/11/2024</p>
           <div class="author-wrapper">
-              <div class="author-image"></div>
               <div class="author-info">
                   <h3>Rodgers K.</h3>
                   <p>Senior Web Developer</p>
@@ -68,6 +96,10 @@
           </div>
       </div>
   </div>
+    <!-- Menu Toggle Button -->
+    <button class="menu-toggle">
+        <i class="fas fa-bars"></i>
+    </button>
     <script src="/static/script.js"></script>
 </body>
 </html>
