--- a/index.html
+++ b/index.html
@@ -487,6 +487,6 @@
 
     </main>
 
-    <script src="/static/script.js"></script>
+    <script src="./static/script.js"></script>
 </body>
 </html>
