add the UI designs page

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <section id="home" class="hero-section">
             <div class="hero-content">
               <h1>Hi, I'm <span>Rodgers!</span></h1>
-              <h2>Full Stack Software Developer</h2>
-              <p>I'm a passionate software & web developer with 3+ years of experience.</p>
+              <h2>UI/UX Design & Mobile App Developer</h2>
+              <p>With 2+ years of experience crafting intuitive digital experiences. I specialize in designing user-centered interfaces and building functional, visually appealing mobile applications. My expertise spans wireframing, prototyping, user research, and cross-platform development, ensuring seamless interactions from concept to deployment</p>
               <div class="cta-buttons">
                 <a href="#contact" class="cta-button cta-primary">Got a project?</a>
                 <a href="#contact" class="cta-button cta-secondary">Let's talk</a>
@@ -59,19 +59,19 @@
             
             <div class="hero-stats">
               <div class="stat-card">
-                <span class="stat-number">3+</span>
+                <span class="stat-number">2+</span>
                 <span class="stat-label">Years of Experience</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">20+</span>
+                <span class="stat-number">10+</span>
                 <span class="stat-label">Projects Completed</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">17+</span>
+                <span class="stat-number">5+</span>
                 <span class="stat-label">Happy Clients</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">15+</span>
+                <span class="stat-number">5+</span>
                 <span class="stat-label">Return Clients</span>
               </div>
               <!-- tech stack -->
@@ -80,8 +80,14 @@
                   <i class="devicon-rust-original" title="Rust" style="--i: 1"></i>
                   <i class="devicon-go-original-wordmark" title="Go" style="--i: 2"></i>
                   <i class="devicon-python-plain" title="Python" style="--i: 3"></i>
-                  <i class="devicon-mongodb-plain" title="MongoDB" style="--i: 4"></i>
+                  <!-- <i class="devicon-mongodb-plain" title="MongoDB" style="--i: 4"></i> -->
                   <i class="devicon-javascript-plain" title="JavaScript" style="--i: 5"></i>
+                  <i class="devicon-typescript-plain" title="TypeScript" style="--i: 6"></i>
+                  <i class="devicon-figma-plain" title="Figma" style="--i: 7"></i>
+                  <i class="devicon-react-plain" title="React" style="--i: 8"></i>
+
+
+
                 </div>
               </div>
             </div>
@@ -93,28 +99,28 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <h3>Web Design</h3>
-                    <p>Creating beautiful, responsive websites that deliver exceptional user experiences.</p>
+                    <h3>UI/UX Design</h3>
+                    <p>Crafting user-centered interfaces with wireframing, prototyping, and accessibility-driven design principles.</p>
                 </div>
                 <div class="service-card">
-                    <h3>UI/UX</h3>
-                    <p>Designing intuitive interfaces and seamless user experiences.</p>
+                    <h3>Mobile App Development</h3>
+                    <p>Building cross-platform apps (iOS/Android) using modern frameworks like Flutter or React Native.</p>
                 </div>
                 <div class="service-card">
-                    <h3>Mobile Application</h3>
-                    <p>Developing cross-platform mobile apps with modern technologies.</p>
+                    <h3>User Research & Testing</h3>
+                    <p>Validating designs through usability studies, persona development, and data-driven iteration.</p>
                 </div>
                 <div class="service-card">
-                    <h3>User Research</h3>
-                    <p>Conducting in-depth research to understand user needs and behaviors.</p>
+                    <h3>Responsive Web Design</h3>
+                    <p>Developing mobile-first websites that adapt seamlessly to all devices and screen sizes.</p>
                 </div>
                 <div class="service-card">
-                    <h3>Brand Identity</h3>
-                    <p>Creating cohesive brand identities that resonate with your target audience.</p>
+                    <h3>Interaction Design</h3>
+                    <p>Designing intuitive workflows and micro-interactions to enhance user engagement.</p>
                 </div>
                 <div class="service-card">
-                    <h3>Digital Marketing</h3>
-                    <p>Strategic digital marketing solutions to grow your online presence.</p>
+                    <h3>App Optimization</h3>
+                    <p>Improving performance, accessibility, and user retention through continuous refinement.</p>
                 </div>
             </div>
         </section>
