add button links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h2>UI/UX Design & Mobile App Developer</h2>
               <p>With 2+ years of experience crafting intuitive digital experiences. I specialize in designing user-centered interfaces and building functional, visually appealing mobile applications. My expertise spans wireframing, prototyping, user research, and cross-platform development, ensuring seamless interactions from concept to deployment</p>
               <div class="cta-buttons">
-                <a href="#contact" class="cta-button cta-primary">Got a project?</a>
+                <a href="https://karodgers.github.io/blog/UI-designs.html" target="_blank" class="cta-button cta-primary">Sample UI Designs</a>
                 <a href="#contact" class="cta-button cta-secondary">Let's talk</a>
               </div>
             </div>
