--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="home" class="hero-section">
             <div class="hero-content">
               <h1>Hi, I'm <span>Rodgers!</span></h1>
-              <h2>UI/UX Design & Mobile App Developer</h2>
+              <h2> Mobile App Developer & UI/UX Designer </h2>
               <p>With 2+ years of experience crafting intuitive digital experiences. I specialize in designing user-centered interfaces and building functional, visually appealing mobile applications. My expertise spans wireframing, prototyping, user research, and cross-platform development, ensuring seamless interactions from concept to deployment</p>
               <div class="cta-buttons">
                 <a href="https://karodgers.github.io/blog/UI-designs.html" target="_blank" class="cta-button cta-primary">Sample UI Designs</a>
