--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 </div>
                 <div class="contact-text">
                     <h3>Email</h3>
-                    <p>rodgers@gmail.com</p>
+                    <p>kaundarodgers@gmail.com</p>
                 </div>
                 </div>
         
@@ -448,7 +448,7 @@
                 </div>
                 <div class="contact-text">
                     <h3>Phone</h3>
-                    <p>+254 729 0112123</p>
+                    <p>+254 796 173 213</p>
                 </div>
                 </div>
         
